--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -19,13 +19,22 @@
 <main>
 <h2>Instructions</h2>
 <p>hyhy Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, ggg is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-
-<div>
+<!--
+<div class="board clearfix">
 	<img src="images/back.png" alt="Queen of Diamonds">
 	<img src="images/back.png" alt="Queen of Hearts">
 	<img src="images/back.png" alt="King of Diamonds">
 	<img src="images/back.png" alt="King of Hearts">
 </div>
+
+<div class="board clearfix">
+     <img src="images/queen-of-diamonds.png" alt="Queen of Diamonds">
+     <img src="images/back.png" alt="Queen of Hearts">
+     <img src="images/king-of-diamonds.png" alt="King of Diamonds">
+     <img src="images/back.png" alt="King of Hearts">
+</div>
+-->
+<div id="game-board" class="board clearfix"></div>
 </main>
 <footer class="clearfix">
 	<p class="copyright">Copyright 2017</p>
